--- a/basic.ipynb
+++ b/basic.ipynb
@@ -80,6 +80,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(\"Hollo world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ]
