--- a/josephus.ipynb
+++ b/josephus.ipynb
@@ -25,65 +25,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['Tony', 'Bob', 'Rose', 'Peter', 'Wade', 'Allen', 'Jack']\n第1位淘汰 Tony\n第2位淘汰 Bob\n第3位淘汰 Rose\n第4位淘汰 Peter\n第5位淘汰 Wade\n第6位淘汰 Allen\n第7位淘汰 Jack\n"
+     "text": "第1位被淘汰\nid:4, name:Tony\n第2位被淘汰\nid:1, name:Bob\n第3位被淘汰\nid:6, name:Rose\n第4位被淘汰\nid:5, name:Peter\n第5位被淘汰\nid:7, name:Wade\n第6位被淘汰\nid:3, name:Allen\n第7位被淘汰\nid:2, name:Jack\n"
     }
    ],
    "source": [
     "# 约瑟夫环问题\n",
     "# 假设有n个人， 从第一个人开始报数， 数到m的人被淘汰\n",
     "\n",
-    "person = ['Bob', 'Jack', 'Allen', 'Tony', 'Peter', 'Rose', 'Wade']\n",
+    "# person = ['Bob', 'Jack', 'Allen', 'Tony', 'Peter', 'Rose', 'Wade']\n",
+    "\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, id):\n",
+    "        self.name = name\n",
+    "        self.id = id\n",
+    "            \n",
+    "    def print_info(self):\n",
+    "        print(\"id:{}, name:{}\" .format(self.id, self.name))\n",
+    "\n",
+    "p1 = Person('Bob', 1)\n",
+    "p2 = Person('Jack', 2)\n",
+    "p3 = Person('Allen', 3)\n",
+    "p4 = Person('Tony', 4)\n",
+    "p5 = Person('Peter', 5)\n",
+    "p6 = Person('Rose', 6)\n",
+    "p7 = Person('Wade', 7)\n",
+    "participant = [p1, p2, p3, p4, p5, p6, p7]\n",
+    "\n",
     "\n",
     "# 创建函数，该函数将返回一个排序后的列表\n",
-    "def josephus(target, m):\n",
+    "def josephus(target, step, start):\n",
     "    n = len(target)\n",
-    "    # 给这n个人进行编号， 从1至n顺序放在列表中\n",
+    "    # 将所有人的序号按顺序（1 ~ n）生成一个列表\n",
     "    sequence = list(range(1, n+1))\n",
-    "    index = 0\n",
+    "    index = start - 1\n",
     "    rank = []\n",
     "    for i in range(n):\n",
     "        count = 0\n",
-    "        while count < m:\n",
+    "        while count < step:\n",
     "            if sequence[index] != 0:\n",
     "                count += 1\n",
-    "            if count == m:\n",
+    "            if count == step:\n",
     "                rank.append(target[index])\n",
     "                sequence[index] = 0\n",
     "            index = (index + 1) % n\n",
     "    return rank\n",
     "\n",
-    "assert(josephus([0, 1, 2, 3], 3) == [2, 1, 3, 0])\n",
+    "# assert(josephus([0, 1, 2, 3], 3) == [2, 1, 3, 0])\n",
     "\n",
-    "def print_list(target):\n",
+    "def print_result(target):\n",
     "    for i in range(len(target)):\n",
-    "        print(\"第%d位淘汰\" %(i+1), target[i])\n",
+    "        print(\"第%d位被淘汰\" %(i+1))   \n",
+    "        target[i].print_info()\n",
     "\n",
-    "rank = josephus(person, 4)\n",
-    "print(rank)\n",
-    "print_list(rank)\n",
+    "rank = josephus(participant, 4, 1)\n",
+    "print_result(rank)\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[1]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    ""
    ]
   }
  ]
