--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,13 +25,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "第1位被淘汰\nid:6, name:Rose\n第2位被淘汰\nid:3, name:Allen\n第3位被淘汰\nid:1, name:Bob\n第4位被淘汰\nid:7, name:Wade\n第5位被淘汰\nid:2, name:Jack\n第6位被淘汰\nid:5, name:Peter\n第7位被淘汰\nid:4, name:Tony\n"
+     "text": "第1位被淘汰\nid:6, name:Rose\n第2位被淘汰\nid:3, name:Allen\n第3位被淘汰\nid:1, name:Bob\n第4位被淘汰\nid:7, name:Wade\n第5位被淘汰\nid:2, name:Jack\n第6位被淘汰\nid:5, name:Peter\n获胜者：\nid:4, name:Tony\n"
     }
    ],
    "source": [
@@ -90,9 +90,11 @@
     "        return result   \n",
     "\n",
     "    def print_result(self, reslut):\n",
-    "        for i in range(len(reslut)):\n",
+    "        for i in range(len(reslut) - 1):\n",
     "            print(\"第%d位被淘汰\" %(i+1))   \n",
     "            reslut[i].print_info()\n",
+    "        print(\"获胜者：\")\n",
+    "        reslut[len(reslut) - 1].print_info()\n",
     "\n",
     "p1 = Josephus.Person('Bob', 1)\n",
     "p2 = Josephus.Person('Jack', 2)\n",
