为Person类增加了age属性

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,13 +25,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "第1位被淘汰\nid:6, name:Rose\n第2位被淘汰\nid:3, name:Allen\n第3位被淘汰\nid:1, name:Bob\n第4位被淘汰\nid:7, name:Wade\n第5位被淘汰\nid:2, name:Jack\n第6位被淘汰\nid:5, name:Peter\n获胜者：\nid:4, name:Tony\n"
+     "text": "第1位被淘汰\nid:6, name:Rose, age:16\n第2位被淘汰\nid:3, name:Allen, age:17\n第3位被淘汰\nid:1, name:Bob, age:15\n第4位被淘汰\nid:7, name:Wade, age:19\n第5位被淘汰\nid:2, name:Jack, age:12\n第6位被淘汰\nid:5, name:Peter, age:15\n获胜者：\nid:4, name:Tony, age:20\n"
     }
    ],
    "source": [
@@ -44,12 +44,12 @@
     "class Josephus:\n",
     "\n",
     "    class Person:\n",
-    "        def __init__(self, name, id):\n",
+    "        def __init__(self, name, id, age):\n",
     "            self.name = name\n",
     "            self.id = id\n",
-    "        \n",
+    "            self.age = age\n",
     "        def print_info(self):\n",
-    "            print(\"id:{}, name:{}\" .format(self.id, self.name))\n",
+    "            print(\"id:{}, name:{}, age:{}\" .format(self.id, self.name, self.age))\n",
     "\n",
     "    def __init__(self, participants, step, start):\n",
     "        self.participants = participants\n",
@@ -80,13 +80,13 @@
     "        print(\"获胜者：\")\n",
     "        reslut[len(reslut) - 1].print_info()\n",
     "\n",
-    "p1 = Josephus.Person('Bob', 1)\n",
-    "p2 = Josephus.Person('Jack', 2)\n",
-    "p3 = Josephus.Person('Allen', 3)\n",
-    "p4 = Josephus.Person('Tony', 4)\n",
-    "p5 = Josephus.Person('Peter', 5)\n",
-    "p6 = Josephus.Person('Rose', 6)\n",
-    "p7 = Josephus.Person('Wade', 7)\n",
+    "p1 = Josephus.Person('Bob', 1, 15)\n",
+    "p2 = Josephus.Person('Jack', 2, 12)\n",
+    "p3 = Josephus.Person('Allen', 3, 17)\n",
+    "p4 = Josephus.Person('Tony', 4, 20)\n",
+    "p5 = Josephus.Person('Peter', 5, 15)\n",
+    "p6 = Josephus.Person('Rose', 6, 16)\n",
+    "p7 = Josephus.Person('Wade', 7, 19)\n",
     "participants = [p1, p2, p3, p4, p5, p6, p7]\n",
     "\n",
     "jos = Josephus(participants, 4, 3)\n",
