--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,20 +58,12 @@
     "\n",
     "    def josephus(self):\n",
     "        n = len(self.participants)\n",
-    "        # 将所有人的序号按顺序（1 ~ n）生成一个列表\n",
-    "        sequence = list(range(1, n+1))\n",
     "        index = self.start - 1\n",
     "        result = []\n",
     "        for i in range(n):\n",
-    "            count = 0\n",
-    "            while count < self.step:\n",
-    "                if sequence[index] != 0:\n",
-    "                    count += 1\n",
-    "                if count == self.step:\n",
-    "                    result.append(self.participants[index])\n",
-    "                    sequence[index] = 0\n",
-    "                index = (index + 1) % n\n",
-    "        return result   \n",
+    "            index = (index + self.step - 1) % len(self.participants)\n",
+    "            result.append(self.participants.pop(index))\n",
+    "        return result\n",
     "\n",
     "    def print_result(self, reslut):\n",
     "        for i in range(len(reslut) - 1):\n",
