--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,65 +25,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "第1位被淘汰\nid:6, name:Rose, age:16\n第2位被淘汰\nid:3, name:Allen, age:17\n第3位被淘汰\nid:1, name:Bob, age:15\n第4位被淘汰\nid:7, name:Wade, age:19\n第5位被淘汰\nid:2, name:Jack, age:12\n第6位被淘汰\nid:5, name:Peter, age:15\n获胜者：\nid:4, name:Tony, age:20\n"
+     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
     }
    ],
    "source": [
     "# 约瑟夫环问题\n",
     "# 假设有n个人， 从第一个人开始报数， 数到m的人被淘汰\n",
-    "\n",
     "# person = ['Bob', 'Jack', 'Allen', 'Tony', 'Peter', 'Rose', 'Wade']\n",
     "\n",
     "\n",
-    "class Josephus:\n",
+    "# 约瑟夫环是一个容器\n",
+    "# 容器一般具有的功能有 增 删 查 改\n",
+    "import copy\n",
     "\n",
-    "    class Person:\n",
-    "        def __init__(self, name, id, age):\n",
-    "            self.name = name\n",
-    "            self.id = id\n",
-    "            self.age = age\n",
-    "        def print_info(self):\n",
-    "            print(\"id:{}, name:{}, age:{}\" .format(self.id, self.name, self.age))\n",
+    "class Person():\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
     "\n",
-    "    def __init__(self, participants, step, start):\n",
-    "        self.participants = participants\n",
-    "        self.step = step\n",
+    "class JosephusRing:\n",
+    "    def __init__(self, start, step):\n",
+    "        self.people = []\n",
     "        self.start = start\n",
+    "        self.step = step\n",
     "\n",
-    "    def josephus(self):\n",
-    "        n = len(self.participants)\n",
+    "        # self.current_index = self.start - 1\n",
+    "        # self.temp = copy.deepcopy(self.people)\n",
+    "\n",
+    "    # 增功能\n",
+    "    def append(self, obj):\n",
+    "        self.people.append(obj)\n",
+    "\n",
+    "    # 删功能\n",
+    "    def remove(self, obj):\n",
+    "        self.people.remove(obj)\n",
+    "    \n",
+    "    # 查功能\n",
+    "    # 查找整个容器内容\n",
+    "    def query_list(self):\n",
+    "        temp = self.people\n",
+    "        size = len(temp)\n",
+    "        if size == 0:\n",
+    "            return None\n",
+    "        \n",
     "        index = self.start - 1\n",
-    "        result = []\n",
-    "        for i in range(n):\n",
-    "            index = (index + self.step - 1) % len(self.participants)\n",
-    "            result.append(self.participants.pop(index))\n",
-    "        return result\n",
+    "        ret = []\n",
+    "        for i in range(size):\n",
+    "            index = (index + self.step - 1) % len(temp)\n",
+    "            ret.append(temp.pop(index))\n",
+    "        return ret\n",
     "\n",
-    "    def print_result(self, reslut):\n",
-    "        for i in range(len(reslut) - 1):\n",
-    "            print(\"第%d位被淘汰\" %(i + 1))   \n",
-    "            reslut[i].print_info()\n",
-    "        print(\"获胜者：\")\n",
-    "        reslut[len(reslut) - 1].print_info()\n",
+    "    # 一个接一个查找容器元素\n",
+    "    def next(self):\n",
+    "        size = len(self.temp)\n",
+    "        if size == 0:\n",
+    "            return None\n",
+    "        \n",
+    "        index = (self.current_index + self.step - 1) % size\n",
+    "        ret = self.temp.pop(index)\n",
+    "        self.current_index = index\n",
+    "        return ret\n",
     "\n",
-    "p1 = Josephus.Person('Bob', 1, 15)\n",
-    "p2 = Josephus.Person('Jack', 2, 12)\n",
-    "p3 = Josephus.Person('Allen', 3, 17)\n",
-    "p4 = Josephus.Person('Tony', 4, 20)\n",
-    "p5 = Josephus.Person('Peter', 5, 15)\n",
-    "p6 = Josephus.Person('Rose', 6, 16)\n",
-    "p7 = Josephus.Person('Wade', 7, 19)\n",
-    "participants = [p1, p2, p3, p4, p5, p6, p7]\n",
+    "    # 重置功能 查找前或更改了self.people的元素后都必须进行重置操作\n",
+    "    def reset(self):\n",
+    "        self.current_index = self.start - 1\n",
+    "        # 深拷贝\n",
+    "        self.temp = copy.deepcopy(self.people)\n",
     "\n",
-    "jos = Josephus(participants, 4, 3)\n",
-    "rank = jos.josephus()\n",
-    "jos.print_result(rank)"
+    "jos = JosephusRing(3, 4)\n",
+    "jos.people.append(Person('Bob', 15))\n",
+    "jos.people.append(Person('Jack', 12))\n",
+    "jos.people.append(Person('Allen', 17))\n",
+    "jos.people.append(Person('Tony', 20))\n",
+    "jos.people.append(Person('Peter', 15))\n",
+    "jos.people.append(Person('Rose', 16))\n",
+    "jos.people.append(Person('Wade', 19))\n",
+    "\n",
+    "jos.reset()\n",
+    "# 一个一个进行查找元素\n",
+    "for i in range(len(jos.people)):\n",
+    "    obj = jos.next()\n",
+    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "# 直接查找整个容器内容\n",
+    "jos.reset()\n",
+    "result = jos.query_list()\n",
+    "for i in range(len(result)):\n",
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n"
    ]
   },
   {
