修改删功能 将remove改为pop

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -63,8 +63,8 @@
     "        self.people.append(obj)\n",
     "\n",
     "    # 删功能\n",
-    "    def remove(self, obj):\n",
-    "        self.people.remove(obj)\n",
+    "    def pop(self, id_):\n",
+    "        self.people.pop(id_)\n",
     "    \n",
     "    # 查功能\n",
     "    # 查找整个容器内容\n",
