增加了测试实例

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,15 +25,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 约瑟夫环问题\n",
     "# 假设有n个人， 从第一个人开始报数， 数到m的人被淘汰\n",
@@ -69,16 +63,15 @@
     "    # 查功能\n",
     "    # 查找整个容器内容\n",
     "    def query_list(self):\n",
-    "        temp = self.people\n",
-    "        size = len(temp)\n",
+    "        size = len(self.temp)\n",
     "        if size == 0:\n",
     "            return None\n",
     "        \n",
     "        index = self.start - 1\n",
     "        ret = []\n",
     "        for i in range(size):\n",
-    "            index = (index + self.step - 1) % len(temp)\n",
-    "            ret.append(temp.pop(index))\n",
+    "            index = (index + self.step - 1) % len(self.temp)\n",
+    "            ret.append(self.temp.pop(index))\n",
     "        return ret\n",
     "\n",
     "    # 一个接一个查找容器元素\n",
@@ -96,8 +89,21 @@
     "    def reset(self):\n",
     "        self.current_index = self.start - 1\n",
     "        # 深拷贝\n",
-    "        self.temp = copy.deepcopy(self.people)\n",
-    "\n",
+    "        self.temp = copy.deepcopy(self.people)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n7\n---------------\nname:Peter, age:15\nname:Jack, age:12\nname:Wade, age:19\nname:Rose, age:16\nname:Bob, age:15\nname:Tony, age:20\nname:Allen, age:17\n7\n---------------\nname:Rose, age:16\nname:Tony, age:20\nname:Allen, age:17\nname:Peter, age:15\nname:Bob, age:15\nname:Wade, age:19\n6\n"
+    }
+   ],
+   "source": [
     "jos = JosephusRing(3, 4)\n",
     "jos.people.append(Person('Bob', 15))\n",
     "jos.people.append(Person('Jack', 12))\n",
@@ -107,8 +113,8 @@
     "jos.people.append(Person('Rose', 16))\n",
     "jos.people.append(Person('Wade', 19))\n",
     "\n",
-    "jos.reset()\n",
     "# 一个一个进行查找元素\n",
+    "jos.reset()\n",
     "for i in range(len(jos.people)):\n",
     "    obj = jos.next()\n",
     "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
@@ -120,7 +126,43 @@
     "jos.reset()\n",
     "result = jos.query_list()\n",
     "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n"
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "jos.reset()\n",
+    "for i in range(len(jos.people)):\n",
+    "    obj = jos.next()\n",
+    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "jos.start = 1\n",
+    "jos.reset()\n",
+    "for i in range(len(jos.people)):\n",
+    "    obj = jos.next()\n",
+    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "jos.start = 2\n",
+    "jos.reset()\n",
+    "for i in range(len(jos.people)):\n",
+    "    obj = jos.next()\n",
+    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "jos.pop(1)\n",
+    "jos.reset()\n",
+    "for i in range(len(jos.people)):\n",
+    "    obj = jos.next()\n",
+    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
+    "print(len(jos.people))"
    ]
   },
   {
