--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
     "        self.start = start\n",
     "        self.step = step\n",
     "\n",
-    "        # self.current_index = self.start - 1\n",
-    "        # self.temp = copy.deepcopy(self.people)\n",
+    "        self.current_index = self.start - 1\n",
+    "        self.temp = copy.deepcopy(self.people)\n",
     "\n",
     "    # 增功能\n",
     "    def append(self, obj):\n",
@@ -85,22 +85,46 @@
     "        self.current_index = index\n",
     "        return ret\n",
     "\n",
+    "    # 用生成器来进行一个一个输出 利用__next__\n",
+    "    def iter(self):\n",
+    "        while True:\n",
+    "            size = len(self.temp)\n",
+    "            if size == 0:\n",
+    "                return None\n",
+    "            \n",
+    "            index = (self.current_index + self.step - 1) % size\n",
+    "            ret = self.temp.pop(index)\n",
+    "            self.current_index = index\n",
+    "            yield ret\n",
+    "\n",
     "    # 重置功能 查找前或更改了self.people的元素后都必须进行重置操作\n",
     "    def reset(self):\n",
     "        self.current_index = self.start - 1\n",
     "        # 深拷贝\n",
-    "        self.temp = copy.deepcopy(self.people)\n"
+    "        self.temp = copy.deepcopy(self.people)\n",
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n7\n---------------\nname:Peter, age:15\nname:Jack, age:12\nname:Wade, age:19\nname:Rose, age:16\nname:Bob, age:15\nname:Tony, age:20\nname:Allen, age:17\n7\n---------------\nname:Rose, age:16\nname:Tony, age:20\nname:Allen, age:17\nname:Peter, age:15\nname:Bob, age:15\nname:Wade, age:19\n6\n"
+     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n7\n---------------\nname:Peter, age:15\nname:Allen, age:17\nname:Bob, age:15\nname:Tony, age:20\nname:Wade, age:19\nname:Rose, age:16\n6\n---------------\nPeter\nAllen\nBob\nTony\nWade\nRose\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "StopIteration",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-dab3b3652ed1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -131,24 +155,7 @@
     "\n",
     "print(\"---------------\")\n",
     "\n",
-    "jos.reset()\n",
-    "for i in range(len(jos.people)):\n",
-    "    obj = jos.next()\n",
-    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
     "jos.start = 1\n",
-    "jos.reset()\n",
-    "for i in range(len(jos.people)):\n",
-    "    obj = jos.next()\n",
-    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
-    "jos.start = 2\n",
     "jos.reset()\n",
     "for i in range(len(jos.people)):\n",
     "    obj = jos.next()\n",
@@ -162,7 +169,19 @@
     "for i in range(len(jos.people)):\n",
     "    obj = jos.next()\n",
     "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))"
+    "print(len(jos.people))\n",
+    "\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "jos.reset()\n",
+    "it = jos.iter()\n",
+    "print(it.__next__().name)\n",
+    "print(it.__next__().name)\n",
+    "print(it.__next__().name)\n",
+    "print(it.__next__().name)\n",
+    "print(it.__next__().name)\n",
+    "print(it.__next__().name)\n",
+    "# print(it.__next__().name)"
    ]
   },
   {
