--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,35 +107,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n7\n---------------\nname:Peter, age:15\nname:Allen, age:17\nname:Bob, age:15\nname:Tony, age:20\nname:Wade, age:19\nname:Rose, age:16\n6\n---------------\nPeter\nAllen\nBob\nTony\nWade\nRose\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "StopIteration",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-dab3b3652ed1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mStopIteration\u001b[0m: "
-     ]
     }
    ],
    "source": [
     "jos = JosephusRing(3, 4)\n",
-    "jos.people.append(Person('Bob', 15))\n",
-    "jos.people.append(Person('Jack', 12))\n",
-    "jos.people.append(Person('Allen', 17))\n",
-    "jos.people.append(Person('Tony', 20))\n",
-    "jos.people.append(Person('Peter', 15))\n",
-    "jos.people.append(Person('Rose', 16))\n",
-    "jos.people.append(Person('Wade', 19))\n",
+    "# jos.people.append(Person('Bob', 15))\n",
+    "# jos.people.append(Person('Jack', 12))\n",
+    "# jos.people.append(Person('Allen', 17))\n",
+    "# jos.people.append(Person('Tony', 20))\n",
+    "# jos.people.append(Person('Peter', 15))\n",
+    "# jos.people.append(Person('Rose', 16))\n",
+    "# jos.people.append(Person('Wade', 19))\n",
+    "\n",
+    "# 通过txt文件写人Person信息\n",
+    "f = open('person.txt')\n",
+    "for line in f:\n",
+    "    temp = line.strip()\n",
+    "    name = temp[ : temp.index(',')]\n",
+    "    age = int(temp[temp.index(',') + 1 : ])\n",
+    "    jos.people.append(Person(name, age))\n",
+    "f.close()\n",
     "\n",
     "# 一个一个进行查找元素\n",
     "jos.reset()\n",
