--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,6 @@
     "        self.start = start\n",
     "        self.step = step\n",
     "\n",
-    "        self.current_index = self.start - 1\n",
-    "        self.temp = copy.deepcopy(self.people)\n",
-    "\n",
     "    # 增功能\n",
     "    def append(self, obj):\n",
     "        self.people.append(obj)\n",
@@ -63,57 +60,43 @@
     "    # 查功能\n",
     "    # 查找整个容器内容\n",
     "    def query_list(self):\n",
-    "        size = len(self.temp)\n",
+    "        temp = copy.copy(self.people)\n",
+    "        size = len(temp)\n",
     "        if size == 0:\n",
     "            return None\n",
     "        \n",
     "        index = self.start - 1\n",
     "        ret = []\n",
     "        for i in range(size):\n",
-    "            index = (index + self.step - 1) % len(self.temp)\n",
-    "            ret.append(self.temp.pop(index))\n",
-    "        return ret\n",
-    "\n",
-    "    # 一个接一个查找容器元素\n",
-    "    def next(self):\n",
-    "        size = len(self.temp)\n",
-    "        if size == 0:\n",
-    "            return None\n",
-    "        \n",
-    "        index = (self.current_index + self.step - 1) % size\n",
-    "        ret = self.temp.pop(index)\n",
-    "        self.current_index = index\n",
+    "            index = (index + self.step - 1) % len(temp)\n",
+    "            ret.append(temp.pop(index))\n",
     "        return ret\n",
     "\n",
     "    # 用生成器来进行一个一个输出 利用__next__\n",
     "    def iter(self):\n",
+    "        temp = self.people\n",
+    "        start_index = self.start - 1\n",
     "        while True:\n",
-    "            size = len(self.temp)\n",
+    "            size = len(temp)\n",
     "            if size == 0:\n",
     "                return None\n",
     "            \n",
-    "            index = (self.current_index + self.step - 1) % size\n",
-    "            ret = self.temp.pop(index)\n",
-    "            self.current_index = index\n",
+    "            index = (start_index + self.step - 1) % size\n",
+    "            ret = temp.pop(index)\n",
+    "            start_index = index\n",
     "            yield ret\n",
-    "\n",
-    "    # 重置功能 查找前或更改了self.people的元素后都必须进行重置操作\n",
-    "    def reset(self):\n",
-    "        self.current_index = self.start - 1\n",
-    "        # 深拷贝\n",
-    "        self.temp = copy.deepcopy(self.people)\n",
     ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n7\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n7\n---------------\nname:Peter, age:15\nname:Allen, age:17\nname:Bob, age:15\nname:Tony, age:20\nname:Wade, age:19\nname:Rose, age:16\n6\n---------------\nPeter\nAllen\nBob\nTony\nWade\nRose\n"
+     "text": "直接查找整个容器内容\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n---------------\nname:Peter, age:15\nname:Allen, age:17\nname:Bob, age:15\nname:Tony, age:20\nname:Wade, age:19\nname:Rose, age:16\n"
     }
    ],
    "source": [
@@ -135,51 +118,25 @@
     "    jos.people.append(Person(name, age))\n",
     "f.close()\n",
     "\n",
-    "# 一个一个进行查找元素\n",
-    "jos.reset()\n",
-    "for i in range(len(jos.people)):\n",
-    "    obj = jos.next()\n",
-    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
     "# 直接查找整个容器内容\n",
-    "jos.reset()\n",
+    "print(\"直接查找整个容器内容\")\n",
     "result = jos.query_list()\n",
     "for i in range(len(result)):\n",
     "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "print(len(jos.people))\n",
     "\n",
     "print(\"---------------\")\n",
     "\n",
     "jos.start = 1\n",
-    "jos.reset()\n",
-    "for i in range(len(jos.people)):\n",
-    "    obj = jos.next()\n",
-    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))\n",
+    "result = jos.query_list()\n",
+    "for i in range(len(result)):\n",
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
     "\n",
     "print(\"---------------\")\n",
     "\n",
     "jos.pop(1)\n",
-    "jos.reset()\n",
-    "for i in range(len(jos.people)):\n",
-    "    obj = jos.next()\n",
-    "    print(\"name:{}, age:{}\" .format(obj.name, obj.age))\n",
-    "print(len(jos.people))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
-    "jos.reset()\n",
     "it = jos.iter()\n",
-    "print(it.__next__().name)\n",
-    "print(it.__next__().name)\n",
-    "print(it.__next__().name)\n",
-    "print(it.__next__().name)\n",
-    "print(it.__next__().name)\n",
-    "print(it.__next__().name)\n",
-    "# print(it.__next__().name)"
+    "for per in it:\n",
+    "    print(\"name:{}, age:{}\" .format(per.name, per.age))"
    ]
   },
   {
