添加ReadFile类，可以读取txt，csv， zip类型文件

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,11 @@
     "# 约瑟夫环是一个容器\n",
     "# 容器一般具有的功能有 增 删 查 改\n",
     "import copy\n",
+    "import csv\n",
+    "import zipfile\n",
     "\n",
     "class Person():\n",
-    "    def __init__(self, name, age):\n",
+    "    def __init__(self, name = '', age = -1):\n",
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
@@ -76,21 +78,58 @@
     "    def iter(self):\n",
     "        temp = self.people\n",
     "        start_index = self.start - 1\n",
-    "        while True:\n",
-    "            size = len(temp)\n",
-    "            if size == 0:\n",
-    "                return None\n",
-    "            \n",
-    "            index = (start_index + self.step - 1) % size\n",
+    "        while temp:    \n",
+    "            index = (start_index + self.step - 1) % len(temp)\n",
     "            ret = temp.pop(index)\n",
     "            start_index = index\n",
     "            yield ret\n",
+    "        \n",
+    "        return None\n",
+    "\n",
+    "class ReadFile:\n",
+    "    # 打开文件\n",
+    "    def open(self,file_name):\n",
+    "        self.file_name = file_name\n",
+    "        self.f = open(self.file_name, 'r')\n",
+    "    \n",
+    "    # 关闭文件\n",
+    "    def close(self):\n",
+    "        self.f.close()\n",
+    "\n",
+    "    # 读取txt文件\n",
+    "    def read_txt_item(self):\n",
+    "        if '.txt' in self.file_name:\n",
+    "            for line in self.f:\n",
+    "                temp = line.strip()\n",
+    "                cut = temp.index(',')\n",
+    "                name = temp[: cut]\n",
+    "                age = temp[cut + 1 :]\n",
+    "                yield name, age\n",
+    "            return None\n",
+    "        return None\n",
+    "\n",
+    "    # 读取csv文件 \n",
+    "    def read_csv_item(self):\n",
+    "        if '.csv' in self.file_name:\n",
+    "            csv_reader = csv.reader(self.f)\n",
+    "            for item in csv_reader:\n",
+    "                name, age = item\n",
+    "                yield name, age\n",
+    "            return None\n",
+    "        return None\n",
+    "\n",
+    "    # 解压zip文件到当前文件夹\n",
+    "    def open_zipfile(self, zipfile_name):\n",
+    "        if '.zip' in zipfile_name:\n",
+    "            with zipfile.ZipFile(zipfile_name) as z:\n",
+    "                z.extractall()\n",
+    "            \n",
     ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -109,13 +148,22 @@
     "# jos.people.append(Person('Rose', 16))\n",
     "# jos.people.append(Person('Wade', 19))\n",
     "\n",
-    "# 通过txt文件写人Person信息\n",
-    "f = open('person.txt')\n",
-    "for line in f:\n",
-    "    temp = line.strip()\n",
-    "    name = temp[ : temp.index(',')]\n",
-    "    age = int(temp[temp.index(',') + 1 : ])\n",
-    "    jos.people.append(Person(name, age))\n",
+    "# 通过txt文件写入Person信息\n",
+    "# f = ReadFile()\n",
+    "# f.open('person.txt')\n",
+    "# it = f.read_txt_item()\n",
+    "# for item in it:\n",
+    "#     name, age = item\n",
+    "#     jos.append(Person(name, age))\n",
+    "# f.close()\n",
+    "\n",
+    "# 通过csv文件写入Person信息\n",
+    "f = ReadFile()\n",
+    "f.open('person.csv')\n",
+    "it = f.read_csv_item()\n",
+    "for item in it:\n",
+    "    name, age = item\n",
+    "    jos.append(Person(name, age))\n",
     "f.close()\n",
     "\n",
     "# 直接查找整个容器内容\n",
@@ -138,6 +186,13 @@
     "for per in it:\n",
     "    print(\"name:{}, age:{}\" .format(per.name, per.age))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
