增加类方法 create_from_txt和create_from_csv

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,35 @@
     "        \n",
     "        return None\n",
     "\n",
+    "    @staticmethod\n",
+    "    def create_from_txt(path):\n",
+    "        if '.txt' not in path:\n",
+    "            raise Exception('wrong path')\n",
+    "        \n",
+    "        out = []\n",
+    "        with open(path) as txt_file:\n",
+    "            for row in txt_file:\n",
+    "                row = row.strip()\n",
+    "                temp = row.split(',')\n",
+    "                name = temp[0]\n",
+    "                age = int(temp[1])\n",
+    "                out.append(Person(name, age))\n",
+    "        return out\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def create_from_csv(path):\n",
+    "        if '.csv' not in path:\n",
+    "            raise Exception('wrong path')  \n",
+    "\n",
+    "        out = []\n",
+    "        with open(path) as csv_file:\n",
+    "            csv_reader = csv.reader(csv_file)\n",
+    "            for row in csv_reader:\n",
+    "                name = row[0]\n",
+    "                age = row[1]\n",
+    "                out.append(Person(name, age))\n",
+    "        return out\n",
+    "\n",
     "class ReadFile:\n",
     "    # 打开文件\n",
     "    def open(self,file_name):\n",
@@ -124,6 +153,26 @@
     "            with zipfile.ZipFile(zipfile_name) as z:\n",
     "                z.extractall()\n",
     "            \n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
+    }
+   ],
+   "source": [
+    "jos = JosephusRing(3, 4)\n",
+    "jos.people = JosephusRing.create_from_csv('person.csv')\n",
+    "result = jos.query_list()\n",
+    "for i in range(len(result)):\n",
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
     ""
    ]
   },
@@ -189,10 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('person.txt') as fp:\n",
+    "    out = []\n",
+    "    for row in fp:\n",
+    "        row = row.strip()\n",
+    "        temp = row.split(',')\n",
+    "        out.append(Person(temp[0], temp[1]))"
+   ]
   },
   {
    "cell_type": "code",
