--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -1,31 +1,8 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.7.6-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +23,7 @@
     "        self.age = age\n",
     "\n",
     "class JosephusRing:\n",
-    "    def __init__(self, start, step):\n",
+    "    def __init__(self, start = -1, step = -1):\n",
     "        self.people = []\n",
     "        self.start = start\n",
     "        self.step = step\n",
@@ -87,7 +64,7 @@
     "        return None\n",
     "\n",
     "    @staticmethod\n",
-    "    def create_from_txt(path):\n",
+    "    def createpeople_from_txt(path):\n",
     "        if '.txt' not in path:\n",
     "            raise Exception('wrong path')\n",
     "        \n",
@@ -102,7 +79,7 @@
     "        return out\n",
     "    \n",
     "    @staticmethod\n",
-    "    def create_from_csv(path):\n",
+    "    def createpeople_from_csv(path):\n",
     "        if '.csv' not in path:\n",
     "            raise Exception('wrong path')  \n",
     "\n",
@@ -115,29 +92,29 @@
     "                out.append(Person(name, age))\n",
     "        return out\n",
     "\n",
-    "\n",
-    "    # 读取csv文件 \n",
-    "    def read_csv_item(self):\n",
-    "        if '.csv' in self.file_name:\n",
-    "            csv_reader = csv.reader(self.f)\n",
-    "            for item in csv_reader:\n",
-    "                name, age = item\n",
-    "                yield name, age\n",
-    "            return None\n",
-    "        return None\n",
-    "\n",
-    "    # 解压zip文件到当前文件夹\n",
-    "    def open_zipfile(self, zipfile_name):\n",
-    "        if '.zip' in zipfile_name:\n",
-    "            with zipfile.ZipFile(zipfile_name) as z:\n",
-    "                z.extractall()\n",
+    "    @staticmethod\n",
+    "    def createpeople_from_zip(path):\n",
+    "        if not zipfile.is_zipfile(path):\n",
+    "            raise Exception('wrong path')\n",
+    "        \n",
+    "        with zipfile.ZipFile(path) as z:\n",
+    "            target_file = input(\"请选择其中一个文件\\n{}\" .format(z.namelist()))\n",
+    "            open_file = z.extract(target_file)\n",
     "            \n",
-    ""
+    "            if '.txt' in target_file:\n",
+    "                out = JosephusRing.create_from_txt(open_file)\n",
+    "            \n",
+    "            if '.csv' in target_file:\n",
+    "                out = JosephusRing.create_from_csv(open_file)\n",
+    "\n",
+    "            return out\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -148,16 +125,15 @@
    ],
    "source": [
     "jos = JosephusRing(3, 4)\n",
-    "jos.people = JosephusRing.create_from_csv('person.csv')\n",
+    "jos.people = JosephusRing.createpeople_from_zip('person.zip')\n",
     "result = jos.query_list()\n",
     "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    ""
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,16 +193,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "person.csv\n"
+    }
+   ],
    "source": [
-    "with open('person.txt') as fp:\n",
-    "    out = []\n",
-    "    for row in fp:\n",
-    "        row = row.strip()\n",
-    "        temp = row.split(',')\n",
-    "        out.append(Person(temp[0], temp[1]))"
+    "\n",
+    "with zipfile.ZipFile('person.zip') as z:\n",
+    "    target_file = input('请选择其中一个文件：{}' .format(z.namelist()))\n",
+    "    print(target_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Help on function open in module zipfile:\n\nopen(self, name, mode='r', pwd=None, *, force_zip64=False)\n    Return file-like object for 'name'.\n    \n    name is a string for the file name within the ZIP file, or a ZipInfo\n    object.\n    \n    mode should be 'r' to read a file already in the ZIP file, or 'w' to\n    write to a file newly added to the archive.\n    \n    pwd is the password to decrypt files (only used for reading).\n    \n    When writing, if the file size is not known in advance but may exceed\n    2 GiB, pass force_zip64 to use the ZIP64 format, which can handle large\n    files.  If the size is known in advance, it is best to pass a ZipInfo\n    instance for name, with zinfo.file_size set.\n\n"
+    }
+   ],
+   "source": [
+    "help(zipfile.ZipFile.open)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'bytes'>\nb'Bob,15'\n<class 'bytes'>\nb'Jack,12'\n<class 'bytes'>\nb'Allen,17'\n<class 'bytes'>\nb'Tony,20'\n<class 'bytes'>\nb'Peter,15'\n<class 'bytes'>\nb'Rose,16'\n<class 'bytes'>\nb'Wade,19'\n"
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "with zipfile.ZipFile('person.zip') as z:\n",
+    "    zp = z.open('person.csv')\n",
+    "    for row in zp:\n",
+    "        print(type(row))\n",
+    "        print(row.strip())"
    ]
   },
   {
@@ -236,5 +251,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.7.6-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
