--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +102,10 @@
     "            open_file = z.extract(target_file)\n",
     "            \n",
     "            if '.txt' in target_file:\n",
-    "                out = JosephusRing.create_from_txt(open_file)\n",
+    "                out = JosephusRing.createpeople_from_txt(open_file)\n",
     "            \n",
     "            if '.csv' in target_file:\n",
-    "                out = JosephusRing.create_from_csv(open_file)\n",
+    "                out = JosephusRing.createpeople_from_csv(open_file)\n",
     "\n",
     "            return out\n",
     "\n",
@@ -114,21 +114,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "name:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
+     "text": "通过zip文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------------\n通过txt文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------------\n通过csv文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
     }
    ],
    "source": [
     "jos = JosephusRing(3, 4)\n",
+    "print('通过zip文件写入people')\n",
     "jos.people = JosephusRing.createpeople_from_zip('person.zip')\n",
     "result = jos.query_list()\n",
     "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n"
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "\n",
+    "print('---------------------')\n",
+    "\n",
+    "print('通过txt文件写入people')\n",
+    "jos.people = JosephusRing.createpeople_from_txt('person.txt')\n",
+    "result = jos.query_list()\n",
+    "for i in range(len(result)):\n",
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "\n",
+    "print('---------------------')\n",
+    "\n",
+    "print('通过csv文件写入people')\n",
+    "jos.people = JosephusRing.createpeople_from_csv('person.csv')\n",
+    "result = jos.query_list()\n",
+    "for i in range(len(result)):\n",
+    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))"
    ]
   },
   {
@@ -189,59 +206,6 @@
     "it = jos.iter()\n",
     "for per in it:\n",
     "    print(\"name:{}, age:{}\" .format(per.name, per.age))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "person.csv\n"
-    }
-   ],
-   "source": [
-    "\n",
-    "with zipfile.ZipFile('person.zip') as z:\n",
-    "    target_file = input('请选择其中一个文件：{}' .format(z.namelist()))\n",
-    "    print(target_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Help on function open in module zipfile:\n\nopen(self, name, mode='r', pwd=None, *, force_zip64=False)\n    Return file-like object for 'name'.\n    \n    name is a string for the file name within the ZIP file, or a ZipInfo\n    object.\n    \n    mode should be 'r' to read a file already in the ZIP file, or 'w' to\n    write to a file newly added to the archive.\n    \n    pwd is the password to decrypt files (only used for reading).\n    \n    When writing, if the file size is not known in advance but may exceed\n    2 GiB, pass force_zip64 to use the ZIP64 format, which can handle large\n    files.  If the size is known in advance, it is best to pass a ZipInfo\n    instance for name, with zinfo.file_size set.\n\n"
-    }
-   ],
-   "source": [
-    "help(zipfile.ZipFile.open)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "<class 'bytes'>\nb'Bob,15'\n<class 'bytes'>\nb'Jack,12'\n<class 'bytes'>\nb'Allen,17'\n<class 'bytes'>\nb'Tony,20'\n<class 'bytes'>\nb'Peter,15'\n<class 'bytes'>\nb'Rose,16'\n<class 'bytes'>\nb'Wade,19'\n"
-    }
-   ],
-   "source": [
-    "import zipfile\n",
-    "with zipfile.ZipFile('person.zip') as z:\n",
-    "    zp = z.open('person.csv')\n",
-    "    for row in zp:\n",
-    "        print(type(row))\n",
-    "        print(row.strip())"
    ]
   },
   {
