--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,89 +63,96 @@
     "        \n",
     "        return None\n",
     "\n",
-    "    @staticmethod\n",
-    "    def createpeople_from_txt(path):\n",
+    "    @classmethod\n",
+    "    def create_from_txt(cls, path):\n",
     "        if '.txt' not in path:\n",
     "            raise Exception('wrong path')\n",
     "        \n",
-    "        out = []\n",
+    "        obj = cls()\n",
     "        with open(path) as txt_file:\n",
     "            for row in txt_file:\n",
     "                row = row.strip()\n",
     "                temp = row.split(',')\n",
     "                name = temp[0]\n",
     "                age = int(temp[1])\n",
-    "                out.append(Person(name, age))\n",
-    "        return out\n",
+    "                obj.append(Person(name, age))\n",
+    "        return obj\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def createpeople_from_csv(path):\n",
+    "    @classmethod\n",
+    "    def create_from_csv(cls, path):\n",
     "        if '.csv' not in path:\n",
     "            raise Exception('wrong path')  \n",
     "\n",
-    "        out = []\n",
+    "        obj = cls()\n",
     "        with open(path) as csv_file:\n",
     "            csv_reader = csv.reader(csv_file)\n",
     "            for row in csv_reader:\n",
     "                name = row[0]\n",
     "                age = row[1]\n",
-    "                out.append(Person(name, age))\n",
-    "        return out\n",
+    "                obj.append(Person(name, age))\n",
+    "        return obj\n",
     "\n",
-    "    @staticmethod\n",
-    "    def createpeople_from_zip(path):\n",
+    "    @classmethod\n",
+    "    def create_from_zip(cls, path, target_file):\n",
     "        if not zipfile.is_zipfile(path):\n",
     "            raise Exception('wrong path')\n",
     "        \n",
+    "        obj = cls()\n",
     "        with zipfile.ZipFile(path) as z:\n",
-    "            target_file = input(\"请选择其中一个文件\\n{}\" .format(z.namelist()))\n",
     "            open_file = z.extract(target_file)\n",
     "            \n",
     "            if '.txt' in target_file:\n",
-    "                out = JosephusRing.createpeople_from_txt(open_file)\n",
+    "                obj = JosephusRing.create_from_txt(open_file)\n",
     "            \n",
     "            if '.csv' in target_file:\n",
-    "                out = JosephusRing.createpeople_from_csv(open_file)\n",
+    "                obj = JosephusRing.create_from_csv(open_file)\n",
     "\n",
-    "            return out\n",
+    "            return obj\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "通过zip文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------------\n通过txt文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------------\n通过csv文件写入people\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
+     "text": "Rose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
     }
    ],
    "source": [
-    "jos = JosephusRing(3, 4)\n",
-    "print('通过zip文件写入people')\n",
-    "jos.people = JosephusRing.createpeople_from_zip('person.zip')\n",
+    "# jos = JosephusRing(3, 4)\n",
+    "# print('通过zip文件写入people')\n",
+    "# jos.people = JosephusRing.createpeople_from_zip('person.zip')\n",
+    "# result = jos.query_list()\n",
+    "# for i in range(len(result)):\n",
+    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "\n",
+    "# print('---------------------')\n",
+    "\n",
+    "# print('通过txt文件写入people')\n",
+    "# jos.people = JosephusRing.createpeople_from_txt('person.txt')\n",
+    "# result = jos.query_list()\n",
+    "# for i in range(len(result)):\n",
+    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "\n",
+    "# print('---------------------')\n",
+    "\n",
+    "# print('通过csv文件写入people')\n",
+    "# jos.people = JosephusRing.createpeople_from_csv('person.csv')\n",
+    "# result = jos.query_list()\n",
+    "# for i in range(len(result)):\n",
+    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
+    "\n",
+    "jos = JosephusRing.create_from_zip('person.zip', 'person.csv')\n",
+    "jos.start = 3\n",
+    "jos.step = 4\n",
     "result = jos.query_list()\n",
-    "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "print('---------------------')\n",
-    "\n",
-    "print('通过txt文件写入people')\n",
-    "jos.people = JosephusRing.createpeople_from_txt('person.txt')\n",
-    "result = jos.query_list()\n",
-    "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "print('---------------------')\n",
-    "\n",
-    "print('通过csv文件写入people')\n",
-    "jos.people = JosephusRing.createpeople_from_csv('person.csv')\n",
-    "result = jos.query_list()\n",
-    "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))"
+    "for item in result:\n",
+    "    print(item.name, item.age)"
    ]
   },
   {
