为Person增加了从reader中创建对象的类方法

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,29 @@
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
+    "    @classmethod\n",
+    "    def create_from_reader(cls, item):\n",
+    "        obj = cls()\n",
+    "        item = item.strip()\n",
+    "        obj.name, obj.age = item.split(',')[0], int(item.split(',')[1])\n",
+    "        return obj\n",
+    "\n",
     "class JosephusRing:\n",
-    "    def __init__(self, start = -1, step = -1):\n",
+    "    def __init__(self, reader = None):\n",
     "        self.people = []\n",
-    "        self.start = start\n",
-    "        self.step = step\n",
+    "        self.start = -1\n",
+    "        self.step = -1\n",
+    "        if reader:\n",
+    "            for item in reader:\n",
+    "                self.people.append(Person.create_from_reader(item))\n",
     "\n",
     "    # 增功能\n",
     "    def append(self, obj):\n",
     "        self.people.append(obj)\n",
     "\n",
     "    # 删功能\n",
-    "    def pop(self, id_):\n",
-    "        self.people.pop(id_)\n",
+    "    def pop(self, index):\n",
+    "        self.people.pop(index)\n",
     "    \n",
     "    # 查功能\n",
     "    # 查找整个容器内容\n",
@@ -124,29 +134,6 @@
     }
    ],
    "source": [
-    "# jos = JosephusRing(3, 4)\n",
-    "# print('通过zip文件写入people')\n",
-    "# jos.people = JosephusRing.createpeople_from_zip('person.zip')\n",
-    "# result = jos.query_list()\n",
-    "# for i in range(len(result)):\n",
-    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "# print('---------------------')\n",
-    "\n",
-    "# print('通过txt文件写入people')\n",
-    "# jos.people = JosephusRing.createpeople_from_txt('person.txt')\n",
-    "# result = jos.query_list()\n",
-    "# for i in range(len(result)):\n",
-    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "# print('---------------------')\n",
-    "\n",
-    "# print('通过csv文件写入people')\n",
-    "# jos.people = JosephusRing.createpeople_from_csv('person.csv')\n",
-    "# result = jos.query_list()\n",
-    "# for i in range(len(result)):\n",
-    "#     print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
     "jos = JosephusRing.create_from_zip('person.zip', 'person.csv')\n",
     "jos.start = 3\n",
     "jos.step = 4\n",
@@ -157,62 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "直接查找整个容器内容\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n---------------\nname:Tony, age:20\nname:Bob, age:15\nname:Rose, age:16\nname:Peter, age:15\nname:Wade, age:19\nname:Allen, age:17\nname:Jack, age:12\n---------------\nname:Peter, age:15\nname:Allen, age:17\nname:Bob, age:15\nname:Tony, age:20\nname:Wade, age:19\nname:Rose, age:16\n"
+     "text": "7\nRose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
     }
    ],
    "source": [
-    "jos = JosephusRing(3, 4)\n",
-    "# jos.people.append(Person('Bob', 15))\n",
-    "# jos.people.append(Person('Jack', 12))\n",
-    "# jos.people.append(Person('Allen', 17))\n",
-    "# jos.people.append(Person('Tony', 20))\n",
-    "# jos.people.append(Person('Peter', 15))\n",
-    "# jos.people.append(Person('Rose', 16))\n",
-    "# jos.people.append(Person('Wade', 19))\n",
-    "\n",
-    "# 通过txt文件写入Person信息\n",
-    "# f = ReadFile()\n",
-    "# f.open('person.txt')\n",
-    "# it = f.read_txt_item()\n",
-    "# for item in it:\n",
-    "#     name, age = item\n",
-    "#     jos.append(Person(name, age))\n",
-    "# f.close()\n",
-    "\n",
-    "# 通过csv文件写入Person信息\n",
-    "f = ReadFile()\n",
-    "f.open('person.csv')\n",
-    "it = f.read_csv_item()\n",
-    "for item in it:\n",
-    "    name, age = item\n",
-    "    jos.append(Person(name, age))\n",
-    "f.close()\n",
-    "\n",
-    "# 直接查找整个容器内容\n",
-    "print(\"直接查找整个容器内容\")\n",
-    "result = jos.query_list()\n",
-    "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
-    "jos.start = 1\n",
-    "result = jos.query_list()\n",
-    "for i in range(len(result)):\n",
-    "    print(\"name:{}, age:{}\" .format(result[i].name, result[i].age))\n",
-    "\n",
-    "print(\"---------------\")\n",
-    "\n",
-    "jos.pop(1)\n",
-    "it = jos.iter()\n",
-    "for per in it:\n",
-    "    print(\"name:{}, age:{}\" .format(per.name, per.age))"
+    "with open('person.csv') as csv_reader:\n",
+    "    jos = JosephusRing(csv_reader)\n",
+    "    jos.start = 3\n",
+    "    jos.step = 4\n",
+    "    print(len(jos.people))\n",
+    "    ret = jos.query_list()\n",
+    "    for each in ret:\n",
+    "        print(each.name, each.age)"
    ]
   },
   {
