增加测试实例

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,44 +124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Rose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
+     "text": "Bob 15\nJack 12\nAllen 17\nTony 20\nPeter 15\nRose 16\nWade 19\n-------------\nRose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
     }
    ],
    "source": [
-    "jos = JosephusRing.create_from_zip('person.zip', 'person.csv')\n",
+    "with open('person.txt') as reader:\n",
+    "    jos = JosephusRing(reader)\n",
+    "    for each in jos.people:\n",
+    "        print(each.name, each.age)\n",
+    "print('-------------')\n",
     "jos.start = 3\n",
     "jos.step = 4\n",
-    "result = jos.query_list()\n",
-    "for item in result:\n",
-    "    print(item.name, item.age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "7\nRose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
-    }
-   ],
-   "source": [
-    "with open('person.csv') as csv_reader:\n",
-    "    jos = JosephusRing(csv_reader)\n",
-    "    jos.start = 3\n",
-    "    jos.step = 4\n",
-    "    print(len(jos.people))\n",
-    "    ret = jos.query_list()\n",
-    "    for each in ret:\n",
-    "        print(each.name, each.age)"
+    "res = jos.query_list()\n",
+    "for each in res:\n",
+    "    print(each.name, each.age)"
    ]
   },
   {
