更改函数名和变量名

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -23,11 +23,11 @@
     "        self.age = age\n",
     "\n",
     "    @classmethod\n",
-    "    def create_from_reader(cls, item):\n",
-    "        obj = cls()\n",
-    "        item = item.strip()\n",
-    "        obj.name, obj.age = item.split(',')[0], int(item.split(',')[1])\n",
-    "        return obj\n",
+    "    def create_from_txt_or_csv_reader(cls, row):\n",
+    "        some_oen = cls()\n",
+    "        row = row.strip()\n",
+    "        some_oen.name, some_oen.age = item.split(',')[0], int(item.split(',')[1])\n",
+    "        return some_oen\n",
     "\n",
     "class JosephusRing:\n",
     "    def __init__(self, reader = None):\n",
@@ -35,8 +35,8 @@
     "        self.start = -1\n",
     "        self.step = -1\n",
     "        if reader:\n",
-    "            for item in reader:\n",
-    "                self.people.append(Person.create_from_reader(item))\n",
+    "            for row in reader:\n",
+    "                self.people.append(Person.create_from_txt_or_csv_reader(row))\n",
     "\n",
     "    # 增功能\n",
     "    def append(self, obj):\n",
