--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,10 +24,10 @@
     "\n",
     "    @classmethod\n",
     "    def create_from_txt_or_csv_reader(cls, row):\n",
-    "        some_oen = cls()\n",
+    "        some_one = cls()\n",
     "        row = row.strip()\n",
-    "        some_oen.name, some_oen.age = item.split(',')[0], int(item.split(',')[1])\n",
-    "        return some_oen\n",
+    "        some_one.name, some_one.age = row.split(',')[0], int(row.split(',')[1])\n",
+    "        return some_one\n",
     "\n",
     "class JosephusRing:\n",
     "    def __init__(self, reader = None):\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
