加入读文件接口 Reader类 和其子类 Txtreader、CSVReader

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import csv\n",
     "import zipfile\n",
     "\n",
-    "class Person():\n",
+    "class Person:\n",
     "    def __init__(self, name = '', age = -1):\n",
     "        self.name = name\n",
     "        self.age = age\n",
@@ -28,8 +28,8 @@
     "        self.start = -1\n",
     "        self.step = -1\n",
     "        if reader:\n",
-    "            for row in reader:\n",
-    "                self.people.append(Person.create_from_txt_or_csv_reader(row))\n",
+    "            for some_one in reader:\n",
+    "                self.people.append(some_one)\n",
     "\n",
     "    # 增功能\n",
     "    def append(self, obj):\n",
@@ -67,31 +67,74 @@
     "        return None\n",
     "\n",
     "\n",
+    "class Reader:\n",
+    "    def __iter__(self):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "class TxtReader(Reader):\n",
+    "    def __init__(self, path):\n",
+    "        self.file = open(path)\n",
+    "       \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        row = self.file.readline()\n",
+    "        if not row:\n",
+    "            self.file.close()\n",
+    "            raise StopIteration\n",
+    "        item = row.strip().split(',')\n",
+    "        name, age = item[0], int(item[1])\n",
+    "        return Person(name, age)\n",
+    "\n",
+    "class CSVReader(Reader):\n",
+    "    def __init__(self, path):\n",
+    "        self.csv_file = open(path)\n",
+    "        self.csv_reader = csv.reader(self.csv_file)\n",
+    "        self.it = self.csv_reader.__iter__()\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        item = self.it.__next__()\n",
+    "        if not item:\n",
+    "            self.csv_file.close()\n",
+    "            raise StopIteration\n",
+    "        name = item[0]\n",
+    "        age = item[1]\n",
+    "        return Person(name, age)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Bob 15\nJack 12\nAllen 17\nTony 20\nPeter 15\nRose 16\nWade 19\n-------------\nRose 16\nAllen 17\nBob 15\nWade 19\nJack 12\nPeter 15\nTony 20\n"
+     "text": "Bob 15\nJack 12\nAllen 17\nTony 20\nPeter 15\nRose 16\nWade 19\n-------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
     }
    ],
    "source": [
-    "with open('person.txt') as reader:\n",
-    "    jos = JosephusRing(reader)\n",
-    "    for each in jos.people:\n",
-    "        print(each.name, each.age)\n",
+    "csv_reader = CSVReader('person.csv')\n",
+    "jos = JosephusRing(csv_reader)\n",
+    "for each in jos.people:\n",
+    "    print(each.name, each.age)\n",
+    "\n",
     "print('-------------')\n",
+    "\n",
     "jos.start = 3\n",
     "jos.step = 4\n",
     "res = jos.query_list()\n",
     "for each in res:\n",
-    "    print(each.name, each.age)"
+    "    print(\"name:{}, age:{}\" .format(each.name, each.age))"
    ]
   },
   {
