分别添加了Txtreader和CSVReader的子类TxtInZipreader和CSVInZipreader用来读取在Zip文件中的txt和csv文件

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -22,6 +22,59 @@
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
+    "class Reader:\n",
+    "    def __iter__(self):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "class TxtReader(Reader):\n",
+    "    def __init__(self, path):\n",
+    "        self.file = open(path)\n",
+    "       \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        row = self.file.readline()\n",
+    "        if not row:\n",
+    "            self.file.close()\n",
+    "            raise StopIteration\n",
+    "        item = row.strip().split(',')\n",
+    "        name, age = item[0], int(item[1])\n",
+    "        return Person(name, age)\n",
+    "\n",
+    "class CSVReader(Reader):\n",
+    "    def __init__(self, path):\n",
+    "        self.csv_file = open(path)\n",
+    "        csv_reader = csv.reader(self.csv_file)\n",
+    "        self.it = csv_reader.__iter__()\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        item = self.it.__next__()\n",
+    "        if not item:\n",
+    "            self.csv_file.close()\n",
+    "            raise StopIteration\n",
+    "        name = item[0]\n",
+    "        age = item[1]\n",
+    "        return Person(name, age)\n",
+    "\n",
+    "class TxtInZipReader(TxtReader):\n",
+    "    def __init__(self, path, target_file):\n",
+    "        with zipfile.ZipFile(path) as zip_file:\n",
+    "            target_path = zip_file.extract(target_file)\n",
+    "        TxtReader.__init__(self, target_path)\n",
+    "\n",
+    "class CSVInZipReader(CSVReader):\n",
+    "    def __init__(self, path, target_file):\n",
+    "        with zipfile.ZipFile(path) as zip_file:\n",
+    "            target_path = zip_file.extract(target_file)\n",
+    "        CSVReader.__init__(self, target_path)\n",
+    "\n",
     "class JosephusRing:\n",
     "    def __init__(self, reader = None):\n",
     "        self.people = []\n",
@@ -65,49 +118,6 @@
     "            yield ret\n",
     "        \n",
     "        return None\n",
-    "\n",
-    "\n",
-    "class Reader:\n",
-    "    def __iter__(self):\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "    def __next__(self):\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "class TxtReader(Reader):\n",
-    "    def __init__(self, path):\n",
-    "        self.file = open(path)\n",
-    "       \n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "\n",
-    "    def __next__(self):\n",
-    "        row = self.file.readline()\n",
-    "        if not row:\n",
-    "            self.file.close()\n",
-    "            raise StopIteration\n",
-    "        item = row.strip().split(',')\n",
-    "        name, age = item[0], int(item[1])\n",
-    "        return Person(name, age)\n",
-    "\n",
-    "class CSVReader(Reader):\n",
-    "    def __init__(self, path):\n",
-    "        self.csv_file = open(path)\n",
-    "        self.csv_reader = csv.reader(self.csv_file)\n",
-    "        self.it = self.csv_reader.__iter__()\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "\n",
-    "    def __next__(self):\n",
-    "        item = self.it.__next__()\n",
-    "        if not item:\n",
-    "            self.csv_file.close()\n",
-    "            raise StopIteration\n",
-    "        name = item[0]\n",
-    "        age = item[1]\n",
-    "        return Person(name, age)\n",
-    "\n",
     "\n"
    ]
   },
