加入测试代码

--- a/josephus_fixed.ipynb
+++ b/josephus_fixed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,20 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Bob 15\nJack 12\nAllen 17\nTony 20\nPeter 15\nRose 16\nWade 19\n-------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
+     "text": "name:Bob, age:15\nname:Jack, age:12\nname:Allen, age:17\nname:Tony, age:20\nname:Peter, age:15\nname:Rose, age:16\nname:Wade, age:19\n-------------\nname:Rose, age:16\nname:Allen, age:17\nname:Bob, age:15\nname:Wade, age:19\nname:Jack, age:12\nname:Peter, age:15\nname:Tony, age:20\n"
     }
    ],
    "source": [
     "csv_reader = CSVReader('person.csv')\n",
     "jos = JosephusRing(csv_reader)\n",
     "for each in jos.people:\n",
-    "    print(each.name, each.age)\n",
+    "    print(\"name:{}, age:{}\" .format(each.name, each.age))\n",
     "\n",
     "print('-------------')\n",
     "\n",
@@ -144,6 +144,42 @@
     "jos.step = 4\n",
     "res = jos.query_list()\n",
     "for each in res:\n",
+    "    print(\"name:{}, age:{}\" .format(each.name, each.age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "name:Bob, age:15\nname:Jack, age:12\nname:Allen, age:17\nname:Tony, age:20\nname:Peter, age:15\nname:Rose, age:16\nname:Wade, age:19\n"
+    }
+   ],
+   "source": [
+    "txt_in_zip_reader = TxtInZipReader('person.zip', 'person.txt')\n",
+    "jos = JosephusRing(txt_in_zip_reader)\n",
+    "for each in jos.people:\n",
+    "    print(\"name:{}, age:{}\" .format(each.name, each.age))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "name:Bob, age:15\nname:Jack, age:12\nname:Allen, age:17\nname:Tony, age:20\nname:Peter, age:15\nname:Rose, age:16\nname:Wade, age:19\n"
+    }
+   ],
+   "source": [
+    "csv_in_zip_reader = TxtInZipReader('person.zip', 'person.csv')\n",
+    "jos = JosephusRing(csv_in_zip_reader)\n",
+    "for each in jos.people:\n",
     "    print(\"name:{}, age:{}\" .format(each.name, each.age))"
    ]
   },
